# classroom-caller

./: .gitignore  README.md
.github/workflows/: build.yml
screen-app/: main.js  package.json  preload.js
screen-app/renderer/: app.js  index.html  style.css
supabase/: schema.sql
teacher-app/: README.md  package-lock.json  package.json
teacher-app/src/: app.js  index.html
teacher-app/src-tauri/: Cargo.toml  tauri.conf.json
teacher-app/src-tauri/icons/: icon.icns
teacher-web/: style.css
